Remove methods with moveOut

--- a/notebooks/User-Guide.ipynb
+++ b/notebooks/User-Guide.ipynb
@@ -592,7 +592,7 @@
     "bfs = nk.distance.BFS(G, v)\n",
     "bfs.run()\n",
     "\n",
-    "bfsdist = bfs.getDistances(False)"
+    "bfsdist = bfs.getDistances()"
    ]
   },
   {
@@ -626,7 +626,7 @@
    "source": [
     "dijkstra = nk.distance.Dijkstra(G, v)\n",
     "dijkstra.run()\n",
-    "spdist = dijkstra.getDistances(False)\n",
+    "spdist = dijkstra.getDistances()\n",
     "sum(spdist) / len(spdist)"
    ]
   },
