Remove deprecated method Graph::nodes

--- a/notebooks/User-Guide.ipynb
+++ b/notebooks/User-Guide.ipynb
@@ -999,7 +999,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "degreeSequence = [CRG.degree(v) for v in CRG.nodes()]\n",
+    "degreeSequence = [CRG.degree(v) for v in CRG.iterNodes()]\n",
     "clgen = nk.generators.ChungLuGenerator(degreeSequence)\n",
     "CLG = clgen.generate()\n",
     "nk.community.detectCommunities(CLG)"
