--- a/notebooks/Distance.ipynb
+++ b/notebooks/Distance.ipynb
@@ -202,6 +202,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Some-Pairs Shortest-Paths (SPSP)\n",
+    "\n",
+    "SPSP is an alternative to APSP, it computes the shortest-path distances from a set of user-specified source nodes to all the other nodes of the graph.\n",
+    "\n",
+    "The constructor `SPSP(G, sources` takes as input a graph and a list of source nodes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize the algorithm\n",
+    "sources = [0, 1, 2]\n",
+    "\n",
+    "spsp = nk.distance.SPSP(G, sources)\n",
+    "\n",
+    "# Run\n",
+    "spsp.run()\n",
+    "\n",
+    "# Print the distances from the selected sources to the target\n",
+    "for source in sources:\n",
+    "    print(\"Distance from {:d} to {:d}: {:.3e}\".format(source, target, spsp.getDistance(source, target)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## A*"
    ]
   },
